# unitree_rl_lab

./: unitree_rl_lab.sh
deploy/robots/g1_23dof/: CMakeLists.txt
deploy/robots/g1_29dof/: CMakeLists.txt
scripts/mimic/: csv_to_npz.py
scripts/rsl_rl/: cli_args.py  play.py  train.py
source/unitree_rl_lab/: pyproject.toml  setup.py
source/unitree_rl_lab/config/: extension.toml
source/unitree_rl_lab/unitree_rl_lab/assets/robots/: unitree.py
source/unitree_rl_lab/unitree_rl_lab/assets/robots/yerobot/0401URDF/urdf/: 0401urdf.urdf
source/unitree_rl_lab/unitree_rl_lab/tasks/locomotion/agents/: rsl_rl_ppo_cfg.py
source/unitree_rl_lab/unitree_rl_lab/tasks/locomotion/mdp/: rewards.py
source/unitree_rl_lab/unitree_rl_lab/tasks/locomotion/robots/g1/23dof/: velocity_env_cfg.py
source/unitree_rl_lab/unitree_rl_lab/tasks/locomotion/robots/g1/29dof/: velocity_env_cfg.py
source/unitree_rl_lab/unitree_rl_lab/tasks/locomotion/robots/go2/: velocity_env_cfg.py
source/unitree_rl_lab/unitree_rl_lab/tasks/locomotion/robots/h1/: velocity_env_cfg.py
source/unitree_rl_lab/unitree_rl_lab/tasks/mimic/agents/: rsl_rl_ppo_cfg.py
source/unitree_rl_lab/unitree_rl_lab/tasks/mimic/mdp/: commands.py  events.py  rewards.py  terminations.py
source/unitree_rl_lab/unitree_rl_lab/tasks/mimic/robots/g1_29dof/dance_102/: tracking_env_cfg.py
source/unitree_rl_lab/unitree_rl_lab/tasks/mimic/robots/g1_29dof/gangnanm_style/: tracking_env_cfg.py
source/unitree_rl_lab/unitree_rl_lab/utils/: export_deploy_cfg.py
